--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>About Me</title>
@@ -50,32 +51,35 @@
 
       <div class="bio">
         <h3 class="text-secondary">BIO</h3>
-        <p>Meu nome é Rodrigo Rabelo, sou estudante de engenharia elétrica e atualmente moro em Belo Horizonte, MG.
-          Passo a maior parte do meu tempo livre experimentando HTML, CSS, BootStrap, PHP e JavaScript(e sua lista interminável de frameworks).
-          Eu gosto de programar e do desafio  de aprender algo novo todos os dias. Se voce não me encontrar programando, provavelmente estarei 
-          correndo na Pampulha ou na academia.
+        <p>Meu nome é Rodrigo Rabelo, sou estudante de Engenharia Elétrica e atualmente moro em Belo Horizonte, MG.
+           Apesar de estar me graduando em engenharia elétrica, venho me qualificando constantemente na área web e agregando aos meus conhecimentos de engenharia.
+        </p>
+        <p>
+           Dentre minhas características profissionais, posso destacar a facilidade em desenvolver tarefas que requerem concentração e complexidade.
+           Tenho como hobby experimentar HTML, CSS, BootStrap, Materialize, Node, JavaScript (e sua lista interminável de frameworks). 
+        <p>Eu gosto de programar e do desafio de aprender algo novo todos os dias.           
+           Se você não me encontrar programando, provavelmente estarei correndo na Pampulha ou na academia.
         </p>
       </div>
 
       <div class="job job-1">
-        <h3>123 Webshop</h3>
-        <h6>Full Stack Developer</h6>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates perferendis totam enim. Nesciunt porro dolores
-          expedita dolor necessitatibus deserunt nemo.</p>
+        <h3>Luiza Barcelos</h3>
+        <h6>Assistente Administrativo</h6>
+        <p>Responsável pelo contas a receber, dentre minhas responsabilidades estão as atividades de conferência de caixas,
+          conciliações bancárias como: cheques, cartões e depósitos bancários, elaboração de indicadores e planilhas.
+        </p>
       </div>
 
       <div class="job job-2">
-        <h3>Designers ABC</h3>
+        <h3>Freelancer</h3>
         <h6>Front End Developer</h6>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates perferendis totam enim. Nesciunt porro dolores
-          expedita dolor necessitatibus deserunt nemo.</p>
+        <p>Idealizador, desenvolvedor e  designer  do site TravelVille, site de viagens</p>
       </div>
 
       <div class="job job-3">
-        <h3>Webworks</h3>
-        <h6>Graphic Designer</h6>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates perferendis totam enim. Nesciunt porro dolores
-          expedita dolor necessitatibus deserunt nemo.</p>
+        <h3>Freelancer</h3>
+        <h6>Web Designer</h6>
+        <p>Idealizador, desenvolvedor e designer do site AcmeStartup, site de inovação e desenvolvimento</p>
       </div>
     </div>
   </main>
