--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Contact Me</title>
@@ -47,13 +48,13 @@
     </h2>
     <div class="boxes">
         <div>
-          <span class="text-secondary">Email:</span>rodrigoalexandrerabelo@gmail.com
+          <span class="text-secondary">Email:</span> rodrigoalexandrerabelo@gmail.com
         </div>
         <div>
-            <span class="text-secondary">Phone:</span>(31)9 9947-4172
+            <span class="text-secondary">Phone:</span> (31)9 9947-4172
         </div>
         <div>
-            <span class="text-secondary">Endereço:</span>Rua dois, Serra Verde, Belo Horizonte
+            <span class="text-secondary">Address:</span> Serra Verde, Belo Horizonte, MG.
         </div>
     </div>
   </main>
