--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Bem Vindo! | Home</title>
 </head>
@@ -38,7 +39,7 @@
   </header>
   <main id="home">
       <h1 class="lg-heading">Rodrigo <span class="text-secondary">Rabelo</span></h1>
-      <h2 class="sm-heading">Web Developer, Designer, Programer & Entrepreneur</h2>
+      <h2 class="sm-heading">Web Developer, Electrical Engineer, Programer & Entrepreneur</h2>
       <div class="icons">
         <a href="https://www.instagram.com/rabelo_rodrigo_" target="blank">
             <i class="fab fa-instagram fa-2x"></i>
