--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>View my Work</title>
@@ -47,58 +48,102 @@
     </h2>
     <div class="projects">
         <div class="item">
-            <a href="https://goofy-lewin-e63ddc.netlify.com/" target="blank">
+            <a href="https://goofy-lewin-e63ddc.netlify.com/" target="_blank">
                 <img src="img/projects/project1.jpg" alt="projects">
             </a>
-            <a href="https://goofy-lewin-e63ddc.netlify.com/" target="blank" class="btn-light">
-                <i class="fas fa-eye"></i>Project
+            <a href="https://goofy-lewin-e63ddc.netlify.com/" target="_blank" class="btn-light">
+                <i class="fas fa-eye"></i> Book List
             </a>
-            <a href="#" class="btn-dark">
-                <i class="fab fa-github"></i>GitHub
+            <a href="https://github.com/RodrigoRabeloBH/Books" target="_blank" class="btn-dark">
+                <i class="fab fa-github"></i> GitHub
             </a>
         </div>
         <div class="item">
-                <a href="https://gallant-torvalds-74e002.netlify.com/" target="blank">
+                <a href="https://gallant-torvalds-74e002.netlify.com/" target="_blank">
                     <img src="img/projects/project2.jpg" alt="projects">
                 </a>
-                <a href="https://gallant-torvalds-74e002.netlify.com/" target="blank" class="btn-light">
-                    <i class="fas fa-eye"></i>Project
+                <a href="https://gallant-torvalds-74e002.netlify.com/" target="_blank" class="btn-light">
+                    <i class="fas fa-eye"></i> Travel Ville
                 </a>
-                <a href="#" class="btn-dark">
-                    <i class="fab fa-github"></i>GitHub
+                <a href="https://github.com/RodrigoRabeloBH/TravelVille--Materialize" target="_blank" class="btn-dark">
+                    <i class="fab fa-github"></i> GitHub
                 </a>
             </div>
             <div class="item">
-                    <a href="https://frosty-swanson-23915d.netlify.com/"target="blank">
+                    <a href="https://frosty-swanson-23915d.netlify.com/"target="_blank">
                         <img src="img/projects/project3.jpg" alt="projects">
                     </a>
-                    <a href="https://frosty-swanson-23915d.netlify.com/"target="blank" class="btn-light">
-                        <i class="fas fa-eye"></i>Project
+                    <a href="https://frosty-swanson-23915d.netlify.com/"target="_blank" class="btn-light">
+                        <i class="fas fa-eye"></i> Acme StartUp
                     </a>
-                    <a href="#" class="btn-dark">
-                        <i class="fab fa-github"></i>GitHub
+                    <a href="https://github.com/RodrigoRabeloBH/AcmeStartUp.V1" target="_blank" class="btn-dark">
+                        <i class="fab fa-github"></i> GitHub
                     </a>
                 </div>
                 <div class="item">
-                        <a href="#"target="blank">
+                        <a href="https://infallible-babbage-168fe9.netlify.com/"target="_blank">
                             <img src="img/projects/project4.jpg" alt="projects">
                         </a>
-                        <a href="#"target="blank" class="btn-light">
-                            <i class="fas fa-eye"></i>Project
+                        <a href="https://infallible-babbage-168fe9.netlify.com/"target="_blank" class="btn-light">
+                            <i class="fas fa-eye"></i> Calorie Calculator
                         </a>
-                        <a href="#" class="btn-dark">
-                            <i class="fab fa-github"></i>GitHub
+                        <a href="https://github.com/RodrigoRabeloBH/CalculoCaloricoDiario/blob/master/js/main.js" target="blank" class="btn-dark">
+                            <i class="fab fa-github"></i> GitHub
                         </a>
                     </div>
                     <div class="item">
-                            <a href="#"target="blank">
+                            <a href="https://wizardly-kalam-de7233.netlify.com/"target="_blank">
                                 <img src="img/projects/project5.jpg" alt="projects">
                             </a>
-                            <a href="#"target="blank" class="btn-light">
-                                <i class="fas fa-eye"></i>Project
+                            <a href="https://wizardly-kalam-de7233.netlify.com/"target="_blank" class="btn-light">
+                                <i class="fas fa-eye"></i> GitHub Profile Finder
                             </a>
-                            <a href="#" class="btn-dark">
-                                <i class="fab fa-github"></i>GitHub
+                            <a href="https://github.com/RodrigoRabeloBH/GitHubProfileFinder" target="_blank" class="btn-dark">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                    </div>                       
+                    <div class="item">
+                            <a href="https://practical-bohr-9e1a9e.netlify.com/"target="_blank">
+                                <img src="img/projects/project6.jpg" alt="projects">
+                            </a>
+                            <a href="https://practical-bohr-9e1a9e.netlify.com/"target="_blank" class="btn-light">
+                                <i class="fas fa-eye"></i> MyAdmin
+                            </a>
+                            <a href="https://github.com/RodrigoRabeloBH/MyAdmin" target="_blank" class="btn-dark">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                    </div>                       
+                    <div class="item">
+                            <a href="https://confident-ride-872a9a.netlify.com"target="_blank">
+                                <img src="img/projects/project7.jpg" alt="projects">
+                            </a>
+                            <a href="https://confident-ride-872a9a.netlify.com"target="_blank" class="btn-light">
+                                <i class="fas fa-eye"></i> Galappear
+                            </a>
+                            <a href="https://github.com/RodrigoRabeloBH/Galappear" target="_blank" class="btn-dark">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                    </div>                       
+                    <div class="item">
+                            <a href="https://compassionate-spence-16a39f.netlify.com"target="_blank">
+                                <img src="img/projects/project8.jpg" alt="projects">
+                            </a>
+                            <a href="https://compassionate-spence-16a39f.netlify.com"target="_blank" class="btn-light">
+                                <i class="fas fa-eye"></i> Weather API
+                            </a>
+                            <a href="https://github.com/RodrigoRabeloBH/WeatherAPI---VanilaJavaScript" target="_blank" class="btn-dark">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                    </div>                       
+                    <div class="item">
+                            <a href="https://brave-khorana-be4feb.netlify.com/"target="_blank">
+                                <img src="img/projects/project9.jpg" alt="projects">
+                            </a>
+                            <a href="https://brave-khorana-be4feb.netlify.com/"target="_blank" class="btn-light">
+                                <i class="fas fa-eye"></i> Chuck Norris Jokes
+                            </a>
+                            <a href="https://github.com/RodrigoRabeloBH/Chuck-Norris-Jokes" target="_blank" class="btn-dark">
+                                <i class="fab fa-github"></i> GitHub
                             </a>
                     </div>                       
       
