--- a/work.html
+++ b/work.html
@@ -96,9 +96,9 @@
                                 <img src="img/projects/project5.jpg" alt="projects">
                             </a>
                             <a href="https://wizardly-kalam-de7233.netlify.com/"target="_blank" class="btn-light">
-                                <i class="fas fa-eye"></i> GitHub Profile Finder
+                                <i class="fas fa-eye"></i> Breaking Bad
                             </a>
-                            <a href="https://github.com/RodrigoRabeloBH/GitHubProfileFinder" target="_blank" class="btn-dark">
+                            <a href="https://github.com/RodrigoRabeloBH/DesafioSambaTech" target="_blank" class="btn-dark">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                     </div>                       
