--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">    
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+          crossorigin="anonymous">
     <title>About Me</title>
 </head>
-<body>
-    
+<body>    
   <header>
       <div class="menu-btn" id="btn">
           <div class="btn-line"></div>
@@ -37,7 +37,6 @@
           </ul>
       </nav>
   </header>
-
   <main id="about">
     <h1 class="lg-heading">
       About
@@ -48,7 +47,6 @@
     </h2>
     <div class="about-info">
       <img src="img/-1-.jpg" alt="Rodrigo Rabelo" class="bio-image">
-
       <div class="bio">
         <h3 class="text-secondary">BIO</h3>
         <p>Meu nome é Rodrigo Rabelo, sou estudante de Engenharia Elétrica e atualmente moro em Belo Horizonte, MG.
@@ -56,26 +54,23 @@
         </p>
         <p>
            Dentre minhas características profissionais, posso destacar a facilidade em desenvolver tarefas que requerem concentração e complexidade.
-           Tenho como hobby experimentar HTML, CSS, BootStrap, Materialize, Node, JavaScript (e sua lista interminável de frameworks). 
+           Tenho como hobby experimentar HTML, CSS, BootStrap, Materialize, C#,Asp.NetCore, JavaScript (e sua lista interminável de frameworks). 
         <p>Eu gosto de programar e do desafio de aprender algo novo todos os dias.           
            Se você não me encontrar programando, provavelmente estarei correndo na Pampulha ou na academia.
         </p>
       </div>
-
       <div class="job job-1">
         <h3>Luiza Barcelos</h3>
-        <h6>Assistente Administrativo</h6>
-        <p>Responsável pelo contas a receber, dentre minhas responsabilidades estão as atividades de conferência de caixas,
-          conciliações bancárias como: cheques, cartões e depósitos bancários, elaboração de indicadores e planilhas.
+        <h6>Planejamento</h6>
+        <p>
+            Desenvolvimento de indicadores, definição de metas, elaboração de estudos e análises estratégicas. 
         </p>
       </div>
-
       <div class="job job-2">
         <h3>Freelancer</h3>
         <h6>Front End Developer</h6>
         <p>Idealizador, desenvolvedor e  designer  do site TravelVille, site de viagens</p>
       </div>
-
       <div class="job job-3">
         <h3>Freelancer</h3>
         <h6>Web Designer</h6>
@@ -83,12 +78,9 @@
       </div>
     </div>
   </main>
-
   <footer id="main-footer">
     Copyright &copy; 2019
   </footer>
-
   <script src="js/main.js"></script>
 </body>
-
 </html>
