--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">    
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+                           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+                           crossorigin="anonymous">
     <title>Contact Me</title>
 </head>
-<body>
-    
+<body>    
   <header>
       <div class="menu-btn" id="btn">
           <div class="btn-line"></div>
@@ -37,7 +37,6 @@
           </ul>
       </nav>
   </header>
-
   <main id="about">
     <h1 class="lg-heading">
      Contact
@@ -62,8 +61,6 @@
   <footer id="main-footer">
     Copyright &copy; 2019
   </footer>
-
   <script src="js/main.js"></script>
 </body>
-
 </html>
