--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
-    
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Bem Vindo! | Home</title>
+    <link rel="stylesheet" href="css/main.css">    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
+          crossorigin="anonymous" />
+    <title>Portfolio | Home</title>
 </head>
-<body id="bg-img">
-    
+<body id="bg-img">    
   <header>
       <div class="menu-btn" id="btn">
           <div class="btn-line"></div>
@@ -47,7 +47,7 @@
         <a href="https://github.com/RodrigoRabeloBH" target="blank">
             <i class="fab fa-github fa-2x"></i>
         </a>
-        <a href=https://www.linkedin.com/in/rodrigo-rabelo-702069147/" target="blank">
+        <a href="https://www.linkedin.com/in/rodrigo-rabelo-702069147/" target="blank">
             <i class="fab fa-linkedin fa-2x"></i>
         </a>
       </div>
