--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
   </header>
   <main id="work">
     <h1 class="lg-heading">
-     My 
+       My 
       <span class="text-secondary">Work</span>
     </h1>
     <h2 class="sm-heading">
@@ -143,6 +143,17 @@
                 <i class="fas fa-eye"></i> Chuck Norris Jokes
             </a>
             <a href="https://github.com/RodrigoRabeloBH/Chuck-Norris-Jokes" target="_blank" class="btn-dark">
+                <i class="fab fa-github"></i> GitHub
+            </a>
+        </div>      
+        <div class="item">
+            <a href="https://ngtodolist.netlify.com"target="_blank">
+                <img src="img/projects/project10.jpg" alt="projects">
+            </a>
+            <a href="https://ngtodolist.netlify.com"target="_blank" class="btn-light">
+                <i class="fas fa-eye"></i> Chuck Norris Jokes
+            </a>
+            <a href="https://github.com/RodrigoRabeloBH/ToDo-With-Angular" target="_blank" class="btn-dark">
                 <i class="fab fa-github"></i> GitHub
             </a>
         </div>      
