--- a/work.html
+++ b/work.html
@@ -81,13 +81,13 @@
             </a>
         </div>
         <div class="item">
-            <a href="https://infallible-babbage-168fe9.netlify.com/"target="_blank">
+            <a href="https://nutrimais.netlify.com/index.html"target="_blank">
                 <img src="img/projects/project4.jpg" alt="projects">
             </a>
-            <a href="https://infallible-babbage-168fe9.netlify.com/"target="_blank" class="btn-light">
-                <i class="fas fa-eye"></i> Calorie Calculator
+            <a href="https://nutrimais.netlify.com/index.html"target="_blank" class="btn-light">
+                <i class="fas fa-eye"></i> NutriMais
             </a>
-            <a href="https://github.com/RodrigoRabeloBH/CalculoCaloricoDiario/blob/master/js/main.js" target="blank" class="btn-dark">
+            <a href="https://github.com/RodrigoRabeloBH/NutreMais" target="blank" class="btn-dark">
                 <i class="fab fa-github"></i> GitHub
             </a>
         </div>
@@ -151,7 +151,7 @@
                 <img src="img/projects/project10.jpg" alt="projects">
             </a>
             <a href="https://ngtodolist.netlify.com"target="_blank" class="btn-light">
-                <i class="fas fa-eye"></i> Chuck Norris Jokes
+                <i class="fas fa-eye"></i> To Do List
             </a>
             <a href="https://github.com/RodrigoRabeloBH/ToDo-With-Angular" target="_blank" class="btn-dark">
                 <i class="fab fa-github"></i> GitHub
