--- a/work.html
+++ b/work.html
@@ -62,7 +62,7 @@
             <a href="https://gallant-torvalds-74e002.netlify.com/" target="_blank">
                 <img src="img/projects/project2.jpg" alt="projects">
             </a>
-            <a href="https://gallant-torvalds-74e002.netlify.com/" target="_blank" class="btn-light">
+            <a href="https://travelvile.netlify.com/" target="_blank" class="btn-light">
                 <i class="fas fa-eye"></i> Travel Ville
             </a>
             <a href="https://github.com/RodrigoRabeloBH/TravelVille--Materialize" target="_blank" class="btn-dark">
@@ -73,7 +73,7 @@
             <a href="https://frosty-swanson-23915d.netlify.com/"target="_blank">
                 <img src="img/projects/project3.jpg" alt="projects">
             </a>
-            <a href="https://frosty-swanson-23915d.netlify.com/"target="_blank" class="btn-light">
+            <a href="https://acmestartup.netlify.com/"target="_blank" class="btn-light">
                 <i class="fas fa-eye"></i> Acme StartUp
             </a>
             <a href="https://github.com/RodrigoRabeloBH/AcmeStartUp.V1" target="_blank" class="btn-dark">
