--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
             </a>
         </div>
         <div class="item">
-            <a href="https://gallant-torvalds-74e002.netlify.com/" target="_blank">
+            <a href="https://travelvile.netlify.com/" target="_blank">
                 <img src="img/projects/project2.jpg" alt="projects">
             </a>
             <a href="https://travelvile.netlify.com/" target="_blank" class="btn-light">
@@ -70,7 +70,7 @@
             </a>
         </div>
         <div class="item">
-            <a href="https://frosty-swanson-23915d.netlify.com/"target="_blank">
+            <a href="https://acmestartup.netlify.com/"target="_blank">
                 <img src="img/projects/project3.jpg" alt="projects">
             </a>
             <a href="https://acmestartup.netlify.com/"target="_blank" class="btn-light">
